--- a/views/booking_views.xml
+++ b/views/booking_views.xml
@@ -41,9 +41,9 @@
                         <field name="bookingkamar_ids">
                             <tree editable='bottom'>
                                 <field name="kamar_id"/>  
-                                <field name="harga_satuan"/> 
+                                <field name="harga_unit"/> 
                                 <field name="qty"/> 
-                                <field name="harga" sum="Total"/>                                        
+                                <field name="total_harga" sum="Total"/>                                        
                             </tree>
                         </field>    
                     </group>
